--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,6 @@ services:
   rmtp:
     image: danilserenok/rmtp:release
     ports:
-      - "8080:8080"
-
+      - "8881:8881"
+    environment:
+      STREAM_PATH: /home/danya/ftp/files/
