--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8881
 spring.application.name=app-stream
 #stream.path=C:\\Users\\serda\\Videos\\VanPiece\\
-stream.path=${STREAM_PATH}
+stream.path=/home/danya/ftp/files
